--- a/playground/content/1.user.md
+++ b/playground/content/1.user.md
@@ -1,5 +1,9 @@
-# User
+# User (Test) Chat Interface
 
-User space
+   Ask me anything...
 
-:chat
+::test-chat
+(hit above for regenerate)
+
+*generate hitting this one*
+::
