--- a/playground/content/kick/0.index.md
+++ b/playground/content/kick/0.index.md
@@ -1,12 +1,12 @@
-# Index
+# Kick Info Index
 
 This is an index.
 
 ## First Chapter
 
-Hello Chapter
+Hello World
 
-### Sub item
+### Sub Station
 
 Initial text
 
@@ -17,3 +17,9 @@ Second para
 ### House
 
 #### Party
+
+#### Pool
+
+## End of life
+
+   ...
