--- a/playground/content/0.index.md
+++ b/playground/content/0.index.md
@@ -1,4 +1,20 @@
 # Playground
 
-::chat
-::
+Welcome to Nuxt Kick It's playground!
+
+## Markdown Content
+
+### Component
+
+This example showcases the MDC for generating content:
+
+```hello-world.md
+    # Hello World
+
+    Oh, famous little sample, ...
+
+    ::chat
+    ::
+```
+
+Click [here](hello-world) to see it in action!
