--- a/playground/content/1.user.md
+++ b/playground/content/1.user.md
@@ -1,9 +1,16 @@
-# User (Test) Chat Interface
+---
+title: User Testing
+description: Simple Example Use Case
+layout: bard-bare
+---
 
-   Ask me anything...
+# Users
 
-::test-chat
-(hit above for regenerate)
+1. Askii
 
-*generate hitting this one*
+::chat
+- content
+- exit
 ::
+
+```
